feat: enable declarationMap, use .d.ts files in monorepo too
Configure TSC to emit declaration maps, providing information needed by
IDEs like VSCode to jump from usage of a symbol to its definition in
the original source code.

Simplify layout of all packages, remove top-level `index.ts` and
`index.d.ts` files in favor of a package.json entry

    "types": "dist/index.d.ts"

Simplify layout of module packages (excluding example applications) and
remove the top-level `index.js` file in favor of a package.json entry
    "main": "dist/index.js"

Update developer documentation and project templates accordingly.

Benefits of these changes:

- It's a preparation step for TypeScript Project References

- Build is consuming less CPU cycles now. User time used to be 5m21
  before, it's 1m48s now. Real time went down from 0m49s to 0m37s.

- Simpler project setup in our packages, we no longer need to maintain
  dummy index files at the top level.

Drawbacks:

- Refactor-rename does not work across packagas. I believe this is a
  limitation of TypeScript, hopefully it will be eventually fixed.

- Navigation across packages may not work until the monorepo is built.

--- a/packages/cli/generators/project/templates/tsconfig.json.ejs
+++ b/packages/cli/generators/project/templates/tsconfig.json.ejs
@@ -22,7 +22,8 @@
     "moduleResolution": "node",
     "target": "es2017",
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "declarationMap": true
   },
   "include": ["src"],
   "exclude": [
