--- a/packages/cli/generators/project/templates/package.plain.json.ejs
+++ b/packages/cli/generators/project/templates/package.plain.json.ejs
@@ -6,7 +6,12 @@
     "loopback-<%= project.projectType -%>",
     "loopback"
   ],
+  <% if (project.projectType === 'application') { -%>
   "main": "index.js",
+  <% } else { -%>
+  "main": "dist/index.js",
+  <% } -%>
+  "types": "dist/index.d.ts",
   "engines": {
     "node": ">=8.9"
   },
